[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-analyser"
version = "0.1.0"
description = "CLI tools for analysing WoW auction data"
authors = [{name = "Aux"}]
dependencies = [
    "click",
    "sqlalchemy",
    "tqdm",
    "slpp",
    "requests",
    "beautifulsoup4"
]

[project.scripts]
auction-analyser = "auction_analyser.cli:cli"
